WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77414
[V8] Web Inspector: heap profile view is missing strong references from DOM nodes to listener functions
https://bugs.webkit.org/show_bug.cgi?id=77414
Summary
[V8] Web Inspector: heap profile view is missing strong references from DOM n...
Yury Semikhatsky
Reported
2012-01-31 01:49:03 PST
Open attachment and take a heap snapshot. Then click "Add listener" button and take another snapshot. Find 'myEventListener' function in the heap view. Result: According to the profiler it is only held by a global weak handle. Expected: Strong reference from corresponding DOM object group/DOM node to the closure object.
Attachments
Test page
(225 bytes, text/html)
2012-01-31 01:49 PST
,
Yury Semikhatsky
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-01-31 01:49:34 PST
Created
attachment 124685
[details]
Test page
Yury Semikhatsky
Comment 2
2012-02-03 06:52:52 PST
The problem has been fixed in V8:
https://code.google.com/p/v8/source/detail?r=10603
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug